Mobile horizontal scroll fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ body {
   color: white;
   font-family: $avenir;
   font-size: $base-font-size;
+  overflow-x: hidden;
 }
 
 body,
